--- a/src/components/TodayForecast/TodayForecast.module.css
+++ b/src/components/TodayForecast/TodayForecast.module.css
@@ -1,7 +1,7 @@
 .today-forecast{
     color: #fff;
-    background-color: blue;
+    background-color: #110e3b;
     padding: 20px;
-    width: 400px;
+    width: 45%;
     text-align: center;    
 }
