--- a/src/components/TodayForecast/TodayForecast.module.css
+++ b/src/components/TodayForecast/TodayForecast.module.css
@@ -1,7 +1,14 @@
 .today-forecast{
     color: #fff;
-    background-color: #110e3b;
+    background-color: #110e3b; 
+    
     padding: 20px;
     width: 45%;
-    text-align: center;    
+    text-align: center;
+
+    position: relative;
+    overflow: hidden;  
 }
+
+
+
