--- a/src/components/TodayForecast/CurrentWeather/CurrentWeather.module.css
+++ b/src/components/TodayForecast/CurrentWeather/CurrentWeather.module.css
@@ -1,5 +1,5 @@
 .current-weather {
-    padding-top: 120px;
+    padding-top: 125px;
     padding-bottom: 90px;
 
     z-index: 2;
@@ -7,6 +7,28 @@
 }
 
 .icon-weather{
-    width: 50px;   
+    width: 50px;
+    margin-right: 15px;   
+}
+
+.day{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.temperature{
+    font-size: 48px;
+    margin-top: 7px 
+}
+
+sup{
+    font-size: 16px;
+    position: relative;
+    top: -15px;
+}
+
+.city{
+    font-size: 21px;
+    margin-top: 9px;
 }
 
