--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,13 @@
 .app .left {
     width: 100%;
 }
+
+h1{
+    font-size: 16px;
+    margin-left: 25px;
+    margin-top: 22px;
+}
+
+h1 span {
+    font-weight: normal;
+}
