--- a/src/components/TodayForecast/Countdown/Countdown.module.css
+++ b/src/components/TodayForecast/Countdown/Countdown.module.css
@@ -15,6 +15,7 @@
 }
 
 .column p:last-child{
-    font-size: 12px;
-    line-height: 1px;    
+    font-size: 8px;
+    line-height: 1px;
+    text-transform: uppercase;   
 }
