--- a/src/components/TodayForecast/TodayForecast.module.css
+++ b/src/components/TodayForecast/TodayForecast.module.css
@@ -3,11 +3,14 @@
     background-color: #110e3b; 
     
     padding: 20px;
-    width: 34%;
+    width: 32%;
     text-align: center;
 
     position: relative;
     overflow: hidden;  
+
+    height: 100vh;
+    max-height: 914px 
 }
 
 
