--- a/src/components/TodayForecast/CurrentWeather/CurrentWeather.module.css
+++ b/src/components/TodayForecast/CurrentWeather/CurrentWeather.module.css
@@ -1,34 +1,34 @@
 .current-weather {
-    padding-top: 125px;
-    padding-bottom: 80px;
+    padding-top: 245px;
+    padding-bottom: 148px;
 
     z-index: 2;
     position: relative;
 }
 
 .icon-weather{
-    width: 50px;
-    margin-right: 15px;   
+    width: 85px;
+    margin-right: 20px;   
 }
 
 .day{
-    font-size: 24px;
+    font-size: 48px;
     font-weight: bold;
 }
 
 .temperature{
-    font-size: 48px;
-    margin-top: 7px 
+    font-size: 85px;
+    /* margin-top: 7px  */
 }
 
 sup{
-    font-size: 16px;
+    font-size: 28px;
     position: relative;
-    top: -15px;
+    top: -28px;
 }
 
 .city{
-    font-size: 21px;
-    margin-top: 9px;
+    font-size: 36px;
+    margin-top: 18px;
 }
 
