--- a/src/components/RangeForecast/RangeForecast.module.css
+++ b/src/components/RangeForecast/RangeForecast.module.css
@@ -1,11 +1,37 @@
-.range-forecast{
-    border: 1px solid green;
-    padding: 20px;
+.range-forecast{   
+    padding: 0 50px;
 
+}
+
+h2{
+    font-size: 21px;
 }
 
 ul {
     margin: 0;
+    margin-top: 35px;
     padding: 0;
-    list-style: none;    
+    list-style: none;
+    
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 20px 
+}
+
+li{    
+    text-align: center;
+}
+
+.day{
+    color: gray;
+}
+
+.icon{
+    width: 55px;
+    margin: 25px 0;
+}
+
+.temperature{
+    font-weight: bold;
+    font-size: 14px;
 }
