--- a/src/components/TodayForecast/TodayForecast.module.css
+++ b/src/components/TodayForecast/TodayForecast.module.css
@@ -9,8 +9,7 @@
     position: relative;
     overflow: hidden;  
 
-    height: 100vh;
-    max-height: 914px 
+    height: calc(100vh - 40px);
 }
 
 
